--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 
 <h1>Hello world!</h1>
+<div>
+    <img src="camel.png" alt="hello world img">
+</div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in my repo</p>
 
