--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line in my repo</p>
+<p>This line here to show how to merging works.</p>
 
 </body>
 </html>
