Adding new image

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
 <h1>Hello world!</h1>
 <div>
-    <img src="camel.png" alt="hello world img">
+    <img src="camel.png" alt="hello world img" class="img">
 </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in my repo</p>
-
+<div>
+    <img src="collab.webp" alt="" class="logo">
+</div>
 </body>
 </html>
