--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in my repo</p>
 <div>
-    <img src="collab.webp" alt="" class="logo">
+    <img src="collab.webp" alt="" class="logo" style="width: 100px; max-width: 200px;">
 </div>
 </body>
 </html>
