update index.html inside new branch

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <div>
     <img src="collab.webp" alt="" class="logo" style="width: 100px; max-width: 200px;">
 </div>
+    <p>Now it new branch in gitHub.</p>
 </body>
 </html>
